[package]
name = "mcpe_protocol"
version = "0.1.0"
authors = ["Bavfalcon9"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Hard depend on binary_utils
binary_utils = { git = "https://github.com/NetrexMC/BinaryUtil", tag = "v0.2.1" }
byteorder = "1.4.3"
glm = "0.2.3"
serde_json = "1.0.66"
